# snapctxmanager

./: CMakeLists.txt  Makefile  Makefile.INAU  README.md  meson.build  snapctxmanager.files  snapctxmanager.includes
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: alloc_traits.h.F3BC4A6F1C8B5CAD.idx  allocated_ptr.h.C90BE2362A2BAB3A.idx  allocator.h.224A20EDA80FC561.idx  array.DFFC70A0252628F2.idx  basic_ios.h.8F1616677B1E36EE.idx  basic_ios.tcc.41465A83D8E9BE49.idx  basic_string.h.70A519BB4D2D5592.idx  basic_string.tcc.920EBB1F27B60F76.idx  bessel_function.tcc.2F4E53D2BEADA4DC.idx  beta_function.tcc.61DD08A9F834EE6B.idx  cerrno.BF7C6C98DEC05960.idx  char_traits.h.9C21A44903BB6FE8.idx  charconv.h.AD9CBD604ACAD656.idx  cmath.A2B2D044D84AAD76.idx  configurabledbschema.cpp.0BF32C7DE6FB4244.idx  configurabledbschema.cpp.500EA608E439C072.idx  configurabledbschema.h.5274B7D7E8961C03.idx  configurabledbschema.h.968F8D5DD503A5B7.idx  configurabledbschemahelper.cpp.451BBD2B97CB16EE.idx  configurabledbschemahelper.cpp.EDF1839E04FB72CF.idx  configurabledbschemahelper.h.4702BBD0084E4C77.idx  configurabledbschemahelper.h.FEEDF39548DE7F1D.idx  configurationparser.cpp.359500F355FA5ACA.idx  configurationparser.cpp.3BD52DBF985572EF.idx  configurationparser.h.18B7900064489018.idx  configurationparser.h.DBD0FF5C4E8E8147.idx  connection.cpp.39263C3B59DA6917.idx  connection.cpp.F3A70E92B9680C91.idx  connection.h.3388E12C30DD753C.idx  connection.h.A45E1A7AE92727FA.idx  connection.h.C1891BC735C4E38E.idx  cpp_type_traits.h.7E39373C4E8C639D.idx  ctxfileloader.cpp.58B6535AD11E1A83.idx  ctxfileloader.h.873AFF19503E2C1D.idx  datasiever.cpp.7D2758ECC74A0FA8.idx  datasiever.cpp.F190284AC531D98B.idx  datasiever.h.937BAD3E954CDEDD.idx  datasiever.h.E7625A215154F6F1.idx  datasiever_bk.cpp.A14770FAFE020EFD.idx  datasiever_bk.cpp.D3EA20F047B17400.idx  (+193 more)
cmake/: snapctxmanagerConfig.cmake.in
snapctxman-cli/: .qmake.stash  CMakeLists.txt  main.cpp  meson.build  meson_options.txt  snapctxman-cli.config  snapctxman-cli.files  snapctxman-cli.includes  tgtest-ctx1.csv  tgtest-ctx2.csv  tgtestsnap.conf  usage.txt
snapctxman-cli/.qtc_clangd/: compile_commands.json
snapctxman-cli/.qtc_clangd/.cache/clangd/index/: alloc_traits.h.F3BC4A6F1C8B5CAD.idx  allocated_ptr.h.C90BE2362A2BAB3A.idx  allocator.h.224A20EDA80FC561.idx  array.DFFC70A0252628F2.idx  basic_string.h.70A519BB4D2D5592.idx  basic_string.tcc.920EBB1F27B60F76.idx  cerrno.BF7C6C98DEC05960.idx  char_traits.h.9C21A44903BB6FE8.idx  charconv.h.AD9CBD604ACAD656.idx  cpp_type_traits.h.7E39373C4E8C639D.idx  cxxabi_forced.h.C4EF66CF3B27AD33.idx  erase_if.h.A664A3F7125A039F.idx  exception.h.C5D20D2CF7745860.idx  functional_hash.h.8972CC0D8DD2602C.idx  getopt.h.10BC6334592080B8.idx  getopt_core.h.5E6EE2E13DCEA52C.idx  getopt_ext.h.569E4F21431C9178.idx  hdbxmacros.h.32C841C49DBA48DC.idx  hdbxsettings.h.8E37B56D4E211B1A.idx  iosfwd.800928927AC106DE.idx  libc-header-start.h.DE4EC70643B7CD1B.idx  list.tcc.F5302270D664A96E.idx  localefwd.h.0AE9D2EB5B02D662.idx  main.cpp.DDB22FB1678C4AAF.idx  map.4BCA09C6FD456E9D.idx  node_handle.h.386F3B4CDD8C21CC.idx  numeric_traits.h.E0B03502149D1B91.idx  ostream_insert.h.A2D3EF074CA19C95.idx  range_access.h.4175EE99F50EF453.idx  snapctxman-cli.config.03CABCE38EA79847.idx  snapctxmanager.h.E2378FD27A12FAC4.idx  snapdbschema.h.1C8A8BF9334917F5.idx  stddef.h.266DC55080CEBA88.idx  stl_algobase.h.4530F290CD073EB8.idx  stl_bvector.h.81D220E7180F63AB.idx  stl_construct.h.4B4B5018144E2832.idx  stl_function.h.52FF9A42ED2CD686.idx  stl_iterator_base_types.h.B93E130844CEF695.idx  stl_list.h.616A9B9BD8BEC785.idx  stl_map.h.954F71427BB91135.idx  (+15 more)
snapctxman-cli/src/: main.cpp  utils.cpp  utils.h
src/: ctxfileloader.cpp  ctxfileloader.h  snapctxman-listener.h  snapctxmanager.cpp  snapctxmanager.h  snapctxmanager_p.h  snapdbschema.cpp  snapdbschema.h  tgutils.cpp  tgutils.h
src/.deps/: libhdbextractor___la-configurationparser.Plo  libhdbextractor___la-hdbextractor.Plo  libhdbextractor___la-hdbextractorprivate.Plo  libhdbextractor___la-hdbxsettings.Plo  libhdbextractor___la-sharedpointer.Plo
src/.libs/: libhdbextractor++.la  libhdbextractor++.lai  libhdbextractor++.so.1  libhdbextractor++.so.1.0.0
tuning_padres/: Tuning_FEL1_DPI.txt  Tuning_FEL2_DPI.txt  Tuning_LDM.txt  Tuning_MAG.txt  Tuning_TMR.txt  Tuning_TMX.txt
